--- a/app/assets/stylesheets/lightmode/static_pages.scss
+++ b/app/assets/stylesheets/lightmode/static_pages.scss
@@ -32,8 +32,6 @@
   padding-bottom: 3rem;
 }
 
-//--------------------------------------//
-//Read more section
 #home-2:before {
   content: '';
   display: block;
@@ -41,6 +39,14 @@
   margin-top: -6rem;
 }
 
+//--------------------------------------//
+//Read more section
+#readmore:before {
+  content: '';
+  display: block;
+  height: 6rem; //Height of header
+  margin-top: -6rem;
+}
 
 #readmore {
   padding-top: 6rem;
@@ -55,6 +61,14 @@
 }
 //--------------------------------------//
 //How it work section
+#howitwork:before {
+  content: '';
+  display: block;
+  height: 12rem; //Height of header
+  margin-top: -12rem;
+}
+
+
 #howitwork {
   margin-bottom: 8rem;
   margin-top: -1rem;
@@ -93,6 +107,14 @@
     margin-top: 5rem;
   }
 }
+
+#demo:before {
+  content: '';
+  display: block;
+  height: 6rem; //Height of header
+  margin-top: -6rem;
+}
+
 
 #demo {
   position: relative;
@@ -200,6 +222,86 @@
 
 .text-small-landing {
   font-size: 110%;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
+}
+
+.wave {
+  color: #fbf3ef;
 }
 
 .wave {
